# multi_task

./: .gitignore  INTERVIEW_CHAIN_SUMMARY.md  Makefile  OPTIMIZATIONS_APPLIED.md  README.md  pyproject.toml  verify_grad_conflict_fix.py
configs/dataset/: aliccp.yaml  featuremap.yaml
configs/experiments/: deepfm_sharedbottom_esmm.yaml  deepfm_sharedbottom_train.yaml  deepfm_sharedbottom_train_ctr.yaml  mmoe_focal_esmm.yaml  (+11 more)
contracts/: processed_schema.md
docs/: aux_focal_implementation.md  aux_focal_quickref.md  aux_focal_summary.md  best_selector_implementation.md  best_selector_migration.md  best_selector_quickstart.md  interview_chain.md  model.md
scripts/: batch_eval.py  canonical.sh  compact.sh  eda.sh  merge_parquet_fast.py  merge_parquet_inplace.py  process.sh  run_interview_chain.ps1  run_interview_chain.py  split.sh  split_tokens.sh  validate_interview_chain_configs.py
src/: __init__.py
tests/: perf_test.py  test_auc_selection_smoke.py  test_aux_focal_smoke.py  test_batch.py  test_best_selector.py  test_checkpoint_roundtrip.py  test_compact_tokens.py  test_composer_integration.py  test_composer_smoke.py  test_data_pipeline.py  test_dataloader_spawn.py  test_eda_smoke.py  test_expert_health_diag.py  test_grad_conflict_sampler.py  test_health_metrics_smoke.py  test_hetero_experts.py  test_loss_bce.py  test_model_forward.py  test_optim_bundle.py  test_processed_pipeline.py  test_sparse_grad_flatten.py  test_sparse_optimizer_grouping.py  test_split.py  test_split_tokens.py  test_train_loop_cvr_zero_mask.py
tools/: a.py  run_all.py  validate_processed.py
(+84 files in other folders)
